<?xml version="1.0" encoding="UTF-8"?>
<package>
  <name>roboy_can</name>
  <version>0.0.0</version>
  <description>The roboy_can package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="root@todo.todo">Rapha</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kacanopen</build_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_depend>std_srvs</build_depend> -->
  <run_depend>kacanopen</run_depend>
  <!-- <run_depend>message_runtime</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->
  <!-- <run_depend>std_srvs</run_depend> -->
  <!-- The export tag contains other, unspecified, tags -->
  <test_depend>rosunit</test_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
